--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
